--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
       <title>Pelatihan Wordpress - PPG Kemandirian</title>
    </head>
    <body>                                                                          
-      <img src="thumbnail.jpg" alt="Thumbnail">                                   
+      <img src="ppg-wordpress.png" alt="Thumbnail">                                   
    </body>
 </html>
