--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-<!DOCTYPE html>                                                                 
+<!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Pelatihan Wordpress - PPG Kemandirian</title>
-   </head>
-   <body>                                                                          
-      <img src="ppg-wordpress.png" alt="Thumbnail">                                   
-   </body>
+
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta property="og:title" content="Pelatihan Wordpress - PPG Kemandirian">
+   <meta property="og:description" content="Pelatihan Wordpress - PPG Kemandirian">
+   <meta property="og:image" content="thumbnail.jpg">
+   <meta property="og:image:width" content="500">
+   <meta property="og:image:height" content="500">
+   <title>Pelatihan Wordpress - PPG Kemandirian</title>
+</head>
+
+<body>
+   <img src="ppg-wordpress.png" alt="Thumbnail">
+</body>
+
 </html>
