--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta property="og:title" content="Pelatihan Wordpress - PPG Kemandirian">
    <meta property="og:description" content="Pelatihan Wordpress - PPG Kemandirian">
-   <meta property="og:image" content="thumbnail.jpg">
-   <meta property="og:image:width" content="500">
-   <meta property="og:image:height" content="500">
+   <meta property="og:image" content="./thumbnail.jpg">
+   <meta property="og:image:width" content="1080">
+   <meta property="og:image:height" content="1080">
    <title>Pelatihan Wordpress - PPG Kemandirian</title>
 </head>
 
